para added by ramesh

--- a/vijat.html
+++ b/vijat.html
@@ -2,3 +2,6 @@
   <h1>vijay</h1>
 </center>
 <hr>
+<p>
+  oseph Vijay Chandrasekhar (born 22 June 1974), known professionally as Vijay, is an Indian actor and playback singer who works in Tamil cinema.
+</p>
